# liquid-crystals-of-cuboids

./: .clang-format  .gitignore  Cuba-4.2.1.md5  Dockerfile  Makefile  README.md  run_docker.sh
excludedVolumeCoefficients/: evol_cuboids_l63.0_m8.0.txt  evol_cuboids_l64.0_m8.0.txt  evol_cuboids_l65.0_m8.0.txt  evol_spherocylinders_l10.0.txt  evol_spherocylinders_l100.0.txt  evol_spherocylinders_l20.0.txt  evol_spherocylinders_l30.0.txt  evol_spherocylinders_l40.0.txt  evol_spherocylinders_l50.0.txt  evol_spherocylinders_l60.0.txt  evol_spherocylinders_l70.0.txt  evol_spherocylinders_l80.0.txt  evol_spherocylinders_l90.0.txt
include/: Config.h  Cuboid.h  ExcludedVolumeCoefficients.h  FileReader.h  Integrator.h  RootFinder.h  SecondVirialWignerEquations.h  Spherocylinder.h  WignerMatrices.h
input/: config_cuboid.txt  config_spherocylinder.txt
plots/: generate_plots.py  pyproject.toml
src/: Config.cpp  ExcludedVolumeCoefficients.cpp  FileReader.cpp  RootFinder.cpp  SecondVirialWignerEquations.cpp  WignerMatrixes.cpp  main.cpp
test/: ExcludedVolumeCoefficientsTest.cpp  FileReaderTest.cpp  IntegratorTest.cpp  main.cpp
