[tool.poetry]
name = "onsager-theory-plots"
version = "0.1.0"
description = ""
authors = ["Tara Drwenski <tdrwenski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
bokeh = "^2.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
